# Financial-Adviser-Local-App

./: .coverage  .gitignore  CLAUDE.md  IMMEDIATE_ACTION_PLAN.md  MVP_IMPLEMENTATION_PLAN.md  README.md  code-structure-api-design.md  database-design.md  package-lock.json  package.json  start-app.bat  start-app.py  start-app.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
.kiro/hooks/: code-quality-analyzer.kiro.hook  docs-sync-hook.kiro.hook  test-on-fix.kiro.hook
.kiro/specs/app-improvements/: design.md  requirements.md  tasks.md
.kiro/specs/cli-financial-advisor/: design.md  requirements.md  tasks.md
.kiro/specs/comprehensive-testing/: design.md  requirements.md  tasks.md
.kiro/specs/github-deployment-fix/: design.md  requirements.md  tasks.md
.kiro/specs/github-pages-deployment-fix/: design.md  requirements.md  tasks.md
.kiro/specs/playwright-e2e-testing/: design.md  requirements.md  tasks.md
.kiro/specs/simplified-mvp/: design.md  requirements.md  tasks.md
.kiro/specs/standalone-executable/: design.md  requirements.md  tasks.md
.kiro/specs/typescript-compilation-fix/: design.md  requirements.md  tasks.md
.kiro/specs/ux-redesign/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
backend/: alembic.ini  conftest.py  debug_api_types.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20fd685b71d6_initial_simplified_schema.py  4212fba071aa_add_transactions_table_and_portfolio_.py  6538f3943e9e_add_goals_table.py  9ce560799de2_add_date_of_birth_to_users_table.py  f1bd6461f78a_remove_client_model_and_link_portfolios_.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  clients.py  goals.py  holdings.py  market_data.py  portfolios.py  recommendations.py  transactions.py
backend/app/models/: __init__.py  base.py  client.py  client_note.py  goal.py  holding.py  market_data.py  portfolio.py  report.py  transaction.py  user.py
backend/app/schemas/: __init__.py  auth.py  client.py  common.py  goal.py  holding.py  portfolio.py  recommendation.py  transaction.py
backend/app/security/: auth.py  encryption.py
backend/app/services/: portfolio_service.py  recommendation.py
backend/app/utils/: debug.py  logging.py  transactions.py  validation.py
backend/tests/: test_health.py  test_main.py
backend/tests/test_api/: test_auth.py  test_goals.py  test_holdings.py  test_portfolios.py  test_transactions.py
docs/: MVP_IMPLEMENTATION_PLAN.md
docs/current/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  IMPLEMENTED_FEATURES.md  ISSUE_FIX_PLAN.md  SIMPLIFICATION_PLAN.md
docs/enhanced/: README.md  build-optimization-plan.md  customer-use-cases.md  technical-implementation-plan.md  testing-strategy.md  web-experience-design.md
docs/future/: next-steps-saas-upgrade.md  saas-expansion-analysis.md
docs/mvp/: agent-work-assignments.md  build-test-security-guide.md  code-patterns.md  code-structure-api-design.md  database-design.md  features-roadmap.md  financial-planning-knowledge.md  parallel-development-plan.md  tech-stack-deep-dive.md  technical-roadmap.md
frontend/: .eslintrc.json  PLAYWRIGHT_TEST_ISSUES.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: auth.spec.ts  dashboard.spec.ts  portfolios.spec.ts  profile-settings.spec.ts  recommendations.spec.ts  simple-test.spec.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/tests/: setup.ts
reviewed/: build-test-security-guide.md  features-roadmap.md  financial-planning-knowledge.md  saas-expansion-analysis.md  tech-stack-deep-dive.md  technical-roadmap.md
scripts/: pre-commit-check.sh  setup-dev.sh  test-integration.sh  test-server.sh  validate-workflow.sh
web/: .eslintrc.json  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/public/: 404.html
web/src/: App.tsx  index.css
(+143 files in other folders)
